[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhut"
version = "1.6.4"
readme = "README.md"
license-files = ["LICENSE"]
# python_requires = ">=3.7"
dependencies = ['numpy', 'pandas', 'pytz']
authors = [ 
    {name = "Mahmud Hassan"},
    {email = "mhassan1900@users.noreply.github.com"},
]
description = "Various utilities by MH that show up often in project use"
requires-python = ">=3.8"
